# PlainSight

./: .gitignore  Cargo.toml  README.md  copy_to_pi.sh  fixes.md
crates/core-ir/: Cargo.toml
crates/core-ir/src/: lib.rs
crates/docs-gen/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: framework.rs  lib.rs  registry.rs
crates/parser/src/languages/: empty.rs  java.rs  mod.rs
fixtures/: hello.java  import_and_package.java
plainsight_bin/: Cargo.toml
plainsight_bin/src/: main.rs
plainsight_lib/: Cargo.toml
plainsight_lib/querys/rust/: variables.scm
plainsight_lib/src/: config.rs  error.rs  file_walker.rs  lib.rs  project_manager.rs  source_indexer.rs
plainsight_lib/src/memory/: file_memory.rs  mod.rs  project_memory.rs  relevance.rs  types.rs
plainsight_lib/src/ollama/: client.rs  config.rs  mod.rs  prompts.rs  task.rs  tools.rs  utils.rs
plainsight_lib/src/ollama/tools/: mod.rs  query_file_source.rs  query_project_memory.rs
plainsight_lib/src/parser/: parser.rs
plainsight_lib/src/parser/specs/: mod.rs  rust.rs
plainsight_lib/src/workflow/: generate.rs  ingest.rs  mod.rs  types.rs
querys/rust/: functions.scm  imports.scm  types.scm  variables.scm
src/: file_walker.rs  main.rs  ollama.rs  project_manager.rs
src/parser/: mod.rs  parser.rs  types.rs
src/parser/specs/: mod.rs  rust.rs
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
