[package]
name = "plain_sight"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24.0"
ollama-rs = { version = "0.3.4", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
