[package]
name = "plainsight"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = "0.3.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "std",
] }
