[package]
name = "plainsight"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "fmt",
    "env-filter",
    "std",
] }
